# mafoc

./: README.adoc  README.org  cabal.project  mafoc-vs-marconi.org
cardano-streaming/src/Cardano/: Streaming.hs
cardano-streaming/src/Cardano/Streaming/: Callbacks.hs  Helpers.hs
docker/: Dockerfile  build-image.sh
mafoc/: README.md  mafoc.cabal  mafoc.cabal.dev
mafoc/app/: Main.hs
mafoc/dbsync-compare/sql/: addressappears.sql  addressbalance.sql  addressdatum.sql  blockbasics.sql  datum.sql  deposit.sql  epochnonce.sql  epochstakepoolsize.sql  fingerprint.sql  intrablockspends.sql  mintburn.sql  scripttx.sql  txo.sql  utxo.sql
mafoc/src/: Prelude.hs
mafoc/src/Mafoc/: CLI.hs  Common.hs  Core.hs  EpochResolution.hs  Exceptions.hs  FieldNameAfterUnderscore.hs  Helpers.hs  LedgerState.hs  Logging.hs  Maps.hs  MultiAsset.hs  RingBuffer.hs  RollbackRingBuffer.hs  Signal.hs  Speed.hs  StateFile.hs  Upstream.hs  Utxo.hs
mafoc/src/Mafoc/Cmds/: Eras.hs  FoldLedgerState.hs  SlotNoChainPoint.hs
mafoc/src/Mafoc/Folds/: EpochStakepoolSize.hs
mafoc/src/Mafoc/Indexer/: Class.hs
mafoc/src/Mafoc/Indexers/: AddressAppears.hs  AddressBalance.hs  AddressDatum.hs  BlockBasics.hs  Datum.hs  Deposit.hs  EpochNonce.hs  EpochStakepoolSize.hs  EpochState.hs  Fingerprint.hs  Mamba.hs  MintBurn.hs  NoOp.hs  ScriptTx.hs  Utxo.hs
mafoc/src/Mafoc/Maps/: BlockBasics.hs  BlockTxCount.hs  MintBurn.hs  NoOp.hs  ScriptTx.hs
mafoc/src/Mafoc/Questions/: IntraBlockSpends.hs
mafoc/src/Mafoc/Upstream/: Formats.hs  Orphans.hs
mafoc/test/: RingBuffer.hs  RollbackRingBuffer.hs  Spec.hs
mafoc/test/Spec/: Helpers.hs
marconi-chain-index/src/Marconi/ChainIndex/: Indexers.hs  Utils.hs
marconi-chain-index/src/Marconi/ChainIndex/Indexers/: AddressDatum.hs  EpochStakepoolSize.hs  EpochState.hs  MintBurn.hs  ScriptTx.hs
marconi-chain-index/src/Marconi/ChainIndex/Node/Client/: GenesisConfig.hs
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json
website/docs/: cli.md  download.md  features.md  intro.md  meta.md
website/docs/development/: _category_.json  development-environment.md  module-structure.md
website/docs/indexers/: AddressAppears.md  AddressBalance.md  AddressDatum.md  BlockBasics.md  Datum.md  Deposit.md  EpochNonce.md  EpochStakepoolSize.md  Fingerprint.md  Mamba.md  MintBurn.md  NoOp.md  ScriptTx.md  Utxo.md  _category_.json
website/src/components/: Common.js
website/src/components/HomepageFeatures/: index.js
website/src/pages/: index.js
website/static/: sql
