cabal-version: 3.0
name:          mafoc
version:       0.0.0.1
license:       Apache-2.0
license-files: LICENSE
author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Mafoc.CLI
    Mafoc.Helpers
    Mafoc.Maps.BlockTxCount
    Mafoc.Maps.MintBurn
    Mafoc.RollbackRingBuffer
    Mafoc.Speed

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , marconi-chain-index
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base                  >=4.9 && <5
    , bytestring
    , optparse-applicative
    , primitive
    , sqlite-simple
    , stm
    , streaming
    , transformers
    , vector

executable mafoc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , mafoc

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative

test-suite mafoc-test
  import:         lang
  hs-source-dirs: test
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  other-modules:  RollbackRingBuffer

  --------------------
  -- Local components
  --------------------
  build-depends:  mafoc

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base             >=4.9 && <5
    , hedgehog
    , hedgehog-extras
    , streaming
    , tasty
    , tasty-hedgehog
