cabal-version: 3.0
name:          mafoc
version:       0.0.0.1
license:       Apache-2.0
license-files: LICENSE
author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

  -- This addresses mmap cannot allocate memory issue for ghc < 9.2.8 and linux kernel >= 6.1.
  -- See: https://discourse.haskell.org/t/facing-mmap-4096-bytes-at-nil-cannot-allocate-memory-youre-not-alone/6259/18
  -- ghc-options:
  --   +RTS -xp -RTS

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Mafoc.CLI
    Mafoc.Cmds.FoldLedgerState
    Mafoc.Cmds.SlotNoChainPoint
    Mafoc.Core
    Mafoc.Exceptions
    Mafoc.StateFile
    Mafoc.Indexers.AddressBalance
    Mafoc.Indexers.AddressDatum
    Mafoc.Indexers.Deposit
    Mafoc.Indexers.BlockBasics
    Mafoc.Indexers.EpochNonce
    Mafoc.Indexers.EpochStakepoolSize
    Mafoc.Indexers.Mamba
    Mafoc.Indexers.MintBurn
    Mafoc.Indexers.NoOp
    Mafoc.Indexers.ScriptTx
    Mafoc.Indexers.Utxo
    Mafoc.Logging
    Mafoc.RingBuffer
    Mafoc.RollbackRingBuffer
    Mafoc.Speed
    Mafoc.Upstream
    Mafoc.Upstream.Formats
    Mafoc.Utxo

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , marconi-chain-index
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-binary
    , cardano-ledger-shelley
    , iohk-monitoring
    , ouroboros-consensus

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , bytestring
    , cborg
    , containers
    , directory
    , filepath
    , optparse-applicative
    , prettyprinter
    , primitive
    , sqlite-simple
    , stm
    , streaming
    , text
    , time
    , transformers
    , vector

executable mafoc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , mafoc

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative
    , text
    , unix

test-suite mafoc-test
  import:         lang
  hs-source-dirs: test
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  other-modules:
    RingBuffer
    RollbackRingBuffer
    Spec.Helpers

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , mafoc

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base            >=4.9 && <5
    , hedgehog
    , streaming
    , tasty
    , tasty-hedgehog
